--- a/main.css
+++ b/main.css
@@ -4,22 +4,23 @@ body {
     border: 2px solid #FF37F7;
 }
 .top-content {
-    /*border: 1px solid #000;*/
+    height: 70px;
+    border: 1px solid black;
 }
 .div-navbar-left {
     border: 1px solid black;
-    display: inline-block;
+    /*display: inline-block;*/
     position: fixed;
     margin-left: 10px;
-    width: 70%;
-    height: 70px;
-    max-height: 70px;
+    width: 600px;
+    height: 60px;
     padding-top: 10px;
 }
 .navbar-left {
+
+
 }
 .navbar-left  ul {
-    border: 1px solid black;
     list-style-type: none;
     min-width: 212px; /* nie przerzuca tekstu */
     text-align: left;
@@ -31,6 +32,8 @@ body {
     color: black;
     text-decoration: none;
     text-transform: uppercase;
+    margin-right: 70px;
+    padding: 10px;
 }
 .navbar-left a:hover {
     color: #7F7F7E
@@ -39,14 +42,11 @@ body {
     /*direction: rtl;*/
     display: inline-block;
     border: 1px solid black;
-    float: right;
     margin-right: 10px;
     height: 70px;
-    max-height: 70px;
-
+    float: right;
 }
 .logo-right img {
-    margin-top: 24px; /* not working */
 }
 footer {
     text-align: center;
